--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
+.prod.env
+.development.env
 .env.development.local
 .env.test.local
 .env.production.local
